tickr/infra/dev/auth-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-db-deployment
    namespace: default
    labels:
        app: auth-db
spec:
    selector:
        matchLabels:
            app: auth-db
    replicas: 1
    template:
        metadata:
            labels:
                app: auth-db
        spec:
            containers:
                - name: auth-db
                  image: mongo
                  ports:
                      - containerPort: 27017
                  resources:
                      requests:
                          cpu: "100m"
                          memory: "256Mi"
                      limits:
                          cpu: "200m"
                          memory: "512Mi"
                  volumeMounts:
                      - name: mongodb-data
                        mountPath: /data/db
            volumes:
                - name: mongodb-data
                  persistentVolumeClaim:
                      claimName: auth-mongo-pvc
            restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
    name: auth-db-cluster-ip
    namespace: default
spec:
    selector:
        app: auth-db
    type: ClusterIP
    ports:
        - name: auth-db
          protocol: TCP
          port: 27017
          targetPort: 27017
