tickr/infra/dev/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: default
  labels:
    app: auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: tickr/auth:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3000
              name: auth
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: auth-cluster-ip
      protocol: TCP
      port: 4000
      targetPort: 4000

---
