tickr/infra/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickr-ingress-service
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Disables SSL redirection
    nginx.ingress.kubernetes.io/hsts: "false" # Disables HSTS to prevent enforced HTTPS
    nginx.ingress.kubernetes.io/enable-cors: "true" # Enables CORS (set to "true" to make the other CORS settings work)
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:30000" # Allowed origin for CORS
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS" # Allowed methods
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization" # Allowed headers
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.tickr.dev
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4000
    - host: tickr.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tickr-client-service
                port:
                  number: 3000
